--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -377,15 +377,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "id": "fbf1b782-2fa6-432e-ac6c-7523d837e94a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def g(a, b=2, *plop): \n",
+    "def g(a, b=2, **kwargs): \n",
     "    print(\"a\", a)\n",
     "    print(\"b\", b)\n",
-    "    print(\"plop\", plop)\n",
+    "    print(\"kwargs\", kwargs)\n",
     "    print(\"-------\")"
    ]
   },
@@ -407,7 +407,7 @@
     }
    ],
    "source": [
-    " g(1)"
+    " g(1, c=()"
    ]
   },
   {
