--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -249,11 +249,11 @@
     "import statistics\n",
     "\n",
     "def timer(f):\n",
-    "    def wrapper(a=None, *args):\n",
+    "    def wrapper(a=None, *args, **kwargs):\n",
     "        times = []\n",
     "        for _ in range(2):\n",
     "            tic = time.time()\n",
-    "            res = f(a=a, *args)\n",
+    "            res = f(*args, )\n",
     "            tac = time.time()\n",
     "            times.append(tac-tic)\n",
     "        print(statistics.mean(times), statistics.stdev(times))\n",
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "id": "e4517ad0-45da-4211-91a5-f9235a97b032",
    "metadata": {},
    "outputs": [
@@ -401,13 +401,13 @@
      "text": [
       "a 1\n",
       "b 2\n",
-      "plop ()\n",
+      "kwargs {}\n",
       "-------\n"
      ]
     }
    ],
    "source": [
-    " g(1, c=()"
+    " g(1)"
    ]
   },
   {
