--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "id": "c915d806-72a9-452d-9eda-ce5329ea4a0b",
    "metadata": {},
    "outputs": [],
@@ -249,11 +249,11 @@
     "import statistics\n",
     "\n",
     "def timer(f):\n",
-    "    def wrapper(a=None, *args, **kwargs):\n",
+    "    def wrapper(*args, **kwargs):\n",
     "        times = []\n",
     "        for _ in range(2):\n",
     "            tic = time.time()\n",
-    "            res = f(*args, )\n",
+    "            res = f(*args, **kwargs)\n",
     "            tac = time.time()\n",
     "            times.append(tac-tic)\n",
     "        print(statistics.mean(times), statistics.stdev(times))\n",
@@ -276,21 +276,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
    "id": "93034b68-4b3a-4fe7-bf02-4a455be01354",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "f() got an unexpected keyword argument 'a'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[53], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[52], line 9\u001b[0m, in \u001b[0;36mtimer.<locals>.wrapper\u001b[0;34m(a, *args)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2\u001b[39m):\n\u001b[1;32m      8\u001b[0m     tic \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m----> 9\u001b[0m     res \u001b[38;5;241m=\u001b[39m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m     tac \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[1;32m     11\u001b[0m     times\u001b[38;5;241m.\u001b[39mappend(tac\u001b[38;5;241m-\u001b[39mtic)\n",
-      "\u001b[0;31mTypeError\u001b[0m: f() got an unexpected keyword argument 'a'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.002581000328064 0.0032242339110833936\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -299,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 61,
    "id": "b3732f3b-c7d2-48b5-b8fb-3d7edd1f3d77",
    "metadata": {},
    "outputs": [
@@ -307,7 +312,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.10250997543334961 0.002787423973116488\n"
+      "0.1031649112701416 0.0013871370781905444\n"
      ]
     },
     {
@@ -316,7 +321,7 @@
        "0.1"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "id": "977de13b-1a65-4bf4-bd6d-f93f6d0d2ac9",
    "metadata": {},
    "outputs": [
@@ -335,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2045915126800537 0.0006470384183392451\n"
+      "0.20462453365325928 0.0005804463976920326\n"
      ]
     },
     {
@@ -344,7 +349,7 @@
        "0.2"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
