--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -544,14 +544,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "ad13c0cf-392c-4029-a037-51a2495f9f44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 () {'b': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(a=None, *args, **kwargs):\n",
+    "    print(a, args, kwargs)\n",
+    "\n",
+    "f(1, b=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45848b2b-4a1a-4487-ad34-8c0ca70660e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    " liste_example = [1, 2, 3, 4, 5]\n",
-    " g(liste_example)\n",
-    " g(*liste_example)"
+    "f(b=1, 2)"
    ]
   }
  ],
