--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 73,
    "id": "ad13c0cf-392c-4029-a037-51a2495f9f44",
    "metadata": {},
    "outputs": [
@@ -552,26 +552,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 () {'b': 2}\n"
+      "1 2 () {}\n"
      ]
     }
    ],
    "source": [
-    "def f(a=None, *args, **kwargs):\n",
-    "    print(a, args, kwargs)\n",
+    "def f(a=None, *args, b=2, **kwargs):\n",
+    "    print(a, b, args, kwargs)\n",
     "\n",
     "f(1, b=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "45848b2b-4a1a-4487-ad34-8c0ca70660e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 () {}\n"
+     ]
+    }
+   ],
    "source": [
-    "f(b=1, 2)"
+    "f(1, )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be7d91dc-2dfc-46f7-8413-0e10b448ee95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
