--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "id": "45848b2b-4a1a-4487-ad34-8c0ca70660e6",
    "metadata": {},
    "outputs": [
@@ -573,18 +573,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 2 () {}\n"
+      "1 100 () {}\n"
      ]
     }
    ],
    "source": [
-    "f(1, )"
+    "f(1, b=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "be7d91dc-2dfc-46f7-8413-0e10b448ee95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mInit signature:\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m/\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m     \n",
+       "map(func, *iterables) --> map object\n",
+       "\n",
+       "Make an iterator that computes the function using arguments from\n",
+       "each of the iterables.  Stops when the shortest iterable is exhausted.\n",
+       "\u001b[0;31mType:\u001b[0m           type\n",
+       "\u001b[0;31mSubclasses:\u001b[0m     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "map?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be7d91dc-2dfc-46f7-8413-0e10b448ee95",
+   "id": "14c16759-e207-498d-9cb9-2275a72b1068",
    "metadata": {},
    "outputs": [],
    "source": []
