--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -610,8 +610,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "14c16759-e207-498d-9cb9-2275a72b1068",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 13, 16, 19]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def addition(a, b, c):\n",
+    "    return a + b + c\n",
+    "\n",
+    "list(map(addition, range(5), range(10, 20), range(4)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61a82636-d138-44b3-b604-99d06a1fd974",
    "metadata": {},
    "outputs": [],
    "source": []
