--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -684,23 +684,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 93,
    "id": "1c81a3df-777b-426d-9e0f-81a4e910f332",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('a', 0), ('b', 1), ('c', 2), ('d', 3), ('e', 4), ('f', 5)]"
+       "[(0, 0, 0, 0),\n",
+       " (1, 1, 1, 1),\n",
+       " (2, 2, 2, 2),\n",
+       " (3, 3, 3, 3),\n",
+       " (4, 4, 4, 4),\n",
+       " (5, 5, 5, 5)]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(zip(\"abcdef\", [0,1,2, 3, 4, 5]))"
+    "list(zip([0,1,2, 3, 4, 5], [0,1,2, 3, 4, 5],[0,1,2, 3, 4, 5], [0,1,2, 3, 4, 5]))"
    ]
   },
   {
