--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -634,78 +634,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 95,
    "id": "61a82636-d138-44b3-b604-99d06a1fd974",
    "metadata": {},
    "outputs": [],
    "source": [
     "def my_map(func, *iterables):\n",
     "    res = []\n",
-    "    for element in elements:\n",
-    "        tmp = func(element)\n",
+    "    print(iterables)\n",
+    "    for arguments in zip(*iterables):\n",
+    "        print(arguments)\n",
+    "        tmp = func(*arguments)\n",
     "        res.append(tmp)\n",
     "    return res "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 96,
    "id": "38c7c8a4-4af0-40c0-963d-133d84245667",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(range(0, 5), range(10, 20), range(0, 4))\n",
+      "(0, 10, 0)\n",
+      "(1, 11, 1)\n",
+      "(2, 12, 2)\n",
+      "(3, 13, 3)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "\u001b[0;31mInit signature:\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m/\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m     \n",
-       "zip(*iterables, strict=False) --> Yield tuples until an input is exhausted.\n",
-       "\n",
-       "   >>> list(zip('abcdefg', range(3), range(4)))\n",
-       "   [('a', 0, 0), ('b', 1, 1), ('c', 2, 2)]\n",
-       "\n",
-       "The zip object yields n-length tuples, where n is the number of iterables\n",
-       "passed as positional arguments to zip().  The i-th element in every tuple\n",
-       "comes from the i-th iterable argument to zip().  This continues until the\n",
-       "shortest argument is exhausted.\n",
-       "\n",
-       "If strict is true and one of the arguments is exhausted before the others,\n",
-       "raise a ValueError.\n",
-       "\u001b[0;31mType:\u001b[0m           type\n",
-       "\u001b[0;31mSubclasses:\u001b[0m     "
+       "[10, 13, 16, 19]"
       ]
      },
+     "execution_count": 96,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "zip?"
+    "my_map(addition, range(5), range(10, 20), range(4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 94,
    "id": "1c81a3df-777b-426d-9e0f-81a4e910f332",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0, 0, 0, 0),\n",
-       " (1, 1, 1, 1),\n",
-       " (2, 2, 2, 2),\n",
-       " (3, 3, 3, 3),\n",
-       " (4, 4, 4, 4),\n",
-       " (5, 5, 5, 5)]"
+       "[(0, 0, 0, 0), (1, 1, 1, 1)]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(zip([0,1,2, 3, 4, 5], [0,1,2, 3, 4, 5],[0,1,2, 3, 4, 5], [0,1,2, 3, 4, 5]))"
+    "list(zip([0,1,2, 3, 4, 5], [0,1,2, 3, 4, 5],[0,1,2, 3, 4, 5], [0,1]))"
    ]
   },
   {
