--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -240,15 +240,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 106,
    "id": "c915d806-72a9-452d-9eda-ce5329ea4a0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f f Ma fonction f\n",
+      "f2 f2 None\n"
+     ]
+    }
+   ],
    "source": [
     "import time \n",
     "import statistics\n",
     "\n",
+    "\n",
     "def timer(f):\n",
+    "    print(f.__name__, f.__qualname__, f.__doc__)\n",
     "    def wrapper(*args, **kwargs):\n",
     "        times = []\n",
     "        for _ in range(2):\n",
@@ -276,14 +287,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "93034b68-4b3a-4fe7-bf02-4a455be01354",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0033814907073975 0.0023551658947887585\n",
+      "Help on function wrapper in module __main__:\n",
+      "\n",
+      "wrapper(*args, **kwargs)\n",
+      "\n",
+      "None\n",
+      "<function timer.<locals>.wrapper at 0x113ba2a20>\n"
+     ]
+    }
+   ],
    "source": [
     "f()\n",
     "help(f)\n",
-    "print(f.__doc__)"
+    "print(f.__doc__)\n",
+    "print(f)"
    ]
   },
   {
