--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 108,
    "id": "c915d806-72a9-452d-9eda-ce5329ea4a0b",
    "metadata": {},
    "outputs": [
@@ -248,8 +248,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f f Ma fonction f\n",
-      "f2 f2 None\n"
+      "f.__name__='f' f.__qualname__='f', f.__doc__='Ma fonction f'\n",
+      "f.__name__='f2' f.__qualname__='f2', f.__doc__=None\n"
      ]
     }
    ],
@@ -259,7 +259,7 @@
     "\n",
     "\n",
     "def timer(f):\n",
-    "    print(f.__name__, f.__qualname__, f.__doc__)\n",
+    "    print(f\"{f.__name__=} {f.__qualname__=}, {f.__doc__=}\")\n",
     "    def wrapper(*args, **kwargs):\n",
     "        times = []\n",
     "        for _ in range(2):\n",
@@ -269,6 +269,8 @@
     "            times.append(tac-tic)\n",
     "        print(statistics.mean(times), statistics.stdev(times))\n",
     "        return res \n",
+    "    wrapper.__name__ = f.__name__\n",
+    "    wrapper.__doc__ = f.__doc__\n",
     "    return wrapper \n",
     "\n",
     "\n",
@@ -287,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 109,
    "id": "93034b68-4b3a-4fe7-bf02-4a455be01354",
    "metadata": {},
    "outputs": [
@@ -295,13 +297,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0033814907073975 0.0023551658947887585\n",
-      "Help on function wrapper in module __main__:\n",
+      "1.0038710832595825 0.0012318680882764108\n",
+      "Help on function f in module __main__:\n",
       "\n",
-      "wrapper(*args, **kwargs)\n",
+      "f(*args, **kwargs)\n",
+      "    Ma fonction f\n",
       "\n",
-      "None\n",
-      "<function timer.<locals>.wrapper at 0x113ba2a20>\n"
+      "Ma fonction f\n",
+      "<function timer.<locals>.wrapper at 0x113f4ad40>\n"
      ]
     }
    ],
@@ -314,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 110,
    "id": "b3732f3b-c7d2-48b5-b8fb-3d7edd1f3d77",
    "metadata": {},
    "outputs": [
@@ -322,7 +325,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1031649112701416 0.0013871370781905444\n"
+      "0.10237264633178711 0.0030355846171486317\n"
      ]
     },
     {
@@ -331,7 +334,7 @@
        "0.1"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
