--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 114,
    "id": "c915d806-72a9-452d-9eda-ce5329ea4a0b",
    "metadata": {},
    "outputs": [
@@ -258,6 +258,7 @@
     "import statistics\n",
     "\n",
     "\n",
+    "\n",
     "def timer(f):\n",
     "    print(f\"{f.__name__=} {f.__qualname__=}, {f.__doc__=}\")\n",
     "    def wrapper(*args, **kwargs):\n",
@@ -269,8 +270,6 @@
     "            times.append(tac-tic)\n",
     "        print(statistics.mean(times), statistics.stdev(times))\n",
     "        return res \n",
-    "    wrapper.__name__ = f.__name__\n",
-    "    wrapper.__doc__ = f.__doc__\n",
     "    return wrapper \n",
     "\n",
     "\n",
@@ -289,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 115,
    "id": "93034b68-4b3a-4fe7-bf02-4a455be01354",
    "metadata": {},
    "outputs": [
@@ -297,14 +296,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0038710832595825 0.0012318680882764108\n",
+      "1.003576636314392 0.0005113255661341664\n",
       "Help on function f in module __main__:\n",
       "\n",
       "f(*args, **kwargs)\n",
-      "    Ma fonction f\n",
+      "    trolo Ma fonction f ttororl\n",
       "\n",
-      "Ma fonction f\n",
-      "<function timer.<locals>.wrapper at 0x113f4ad40>\n"
+      "trolo Ma fonction f ttororl\n",
+      "<function timer.<locals>.wrapper at 0x113f4a840>\n"
      ]
     }
    ],
@@ -317,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 113,
    "id": "b3732f3b-c7d2-48b5-b8fb-3d7edd1f3d77",
    "metadata": {},
    "outputs": [
@@ -325,7 +324,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.10237264633178711 0.0030355846171486317\n"
+      "0.10076355934143066 0.000651084515796291\n"
      ]
     },
     {
@@ -334,7 +333,7 @@
        "0.1"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
