--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 116,
    "id": "c915d806-72a9-452d-9eda-ce5329ea4a0b",
    "metadata": {},
    "outputs": [
@@ -256,11 +256,11 @@
    "source": [
     "import time \n",
     "import statistics\n",
-    "\n",
-    "\n",
+    "import functools\n",
     "\n",
     "def timer(f):\n",
     "    print(f\"{f.__name__=} {f.__qualname__=}, {f.__doc__=}\")\n",
+    "    @functools.wraps(f)\n",
     "    def wrapper(*args, **kwargs):\n",
     "        times = []\n",
     "        for _ in range(2):\n",
@@ -270,6 +270,8 @@
     "            times.append(tac-tic)\n",
     "        print(statistics.mean(times), statistics.stdev(times))\n",
     "        return res \n",
+    "    #wrapper.__name__ = f.__name__\n",
+    "    #wrapper.__doc__ = f\"trolo {f.__doc__} ttororl\"\n",
     "    return wrapper \n",
     "\n",
     "\n",
@@ -288,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 117,
    "id": "93034b68-4b3a-4fe7-bf02-4a455be01354",
    "metadata": {},
    "outputs": [
@@ -296,14 +298,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.003576636314392 0.0005113255661341664\n",
+      "1.0036906003952026 0.0011421795946452284\n",
       "Help on function f in module __main__:\n",
       "\n",
-      "f(*args, **kwargs)\n",
-      "    trolo Ma fonction f ttororl\n",
+      "f()\n",
+      "    Ma fonction f\n",
       "\n",
-      "trolo Ma fonction f ttororl\n",
-      "<function timer.<locals>.wrapper at 0x113f4a840>\n"
+      "Ma fonction f\n",
+      "<function f at 0x1114d04a0>\n"
      ]
     }
    ],
