--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -718,8 +718,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "e515b1b7-3135-4359-ac10-96b4980e7b7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: '1', 2: '2'} {2: 'deux', 3: 'trois'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d1 = {1: \"1\", 2: \"2\"}\n",
+    "d2 = {2: \"deux\", 3: \"trois\"}\n",
+    "\n",
+    "print(d1, d2)\n",
+    "print({"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18dd9ef1-8d75-4e46-9769-bf9476e058c4",
    "metadata": {},
    "outputs": [],
    "source": []
