--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 124,
    "id": "e515b1b7-3135-4359-ac10-96b4980e7b7c",
    "metadata": {},
    "outputs": [
@@ -726,16 +726,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: '1', 2: '2'} {2: 'deux', 3: 'trois'}\n"
+      "{1: '1', 2: '2'} {2: 'deux', 3: 'trois'}\n",
+      "{1: '1', 2: 'deux', 3: 'trois'}\n",
+      "{1: '1', 2: 'deux', 3: 'trois'}\n"
      ]
     }
    ],
    "source": [
     "d1 = {1: \"1\", 2: \"2\"}\n",
     "d2 = {2: \"deux\", 3: \"trois\"}\n",
+    "d3 = {}\n",
     "\n",
     "print(d1, d2)\n",
-    "print({"
+    "print({**d1, **d2})\n",
+    "d3.update(d1)\n",
+    "d3.update(d2)\n",
+    "print(d3)"
    ]
   },
   {
