--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -750,7 +750,10 @@
    "id": "18dd9ef1-8d75-4e46-9769-bf9476e058c4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s1 = set([1, 2, 3])\n",
+    "s2 = se"
+   ]
   }
  ],
  "metadata": {
