--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -746,14 +746,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "id": "18dd9ef1-8d75-4e46-9769-bf9476e058c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3} {2, 3, 4, 5}\n",
+      "{1, 2, 3, 4, 5}\n"
+     ]
+    }
+   ],
    "source": [
-    "s1 = set([1, 2, 3])\n",
-    "s2 = se"
+    "s1 = set([1, 2, 3, 3])\n",
+    "s2 = set([2, 3, 4, 5])\n",
+    "print(s1, s2)\n",
+    "s3 = s1 | s2\n",
+    "print(s3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "f3f719bc-bb29-4fd3-84c3-c409fe8abc98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 1, 5, 2, 3, 4, 2]\n",
+    "l = list(set(l))\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea66aa5e-c8e7-4050-911d-46206a3c31e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
