--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -810,8 +810,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "id": "efe4160b-b2d3-4d94-9385-0ac46d2fa193",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fib(n):\n",
+    "    print(n)\n",
+    "    if n < 2:\n",
+    "        return n\n",
+    "    return fib(n-1) + fib(n-2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "93349a79-ac24-4bff-90f7-9f97681c00cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fib(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3d43eb0-fc44-4cde-adca-f5d7e25bc517",
    "metadata": {},
    "outputs": [],
    "source": []
