--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 138,
    "id": "93349a79-ac24-4bff-90f7-9f97681c00cf",
    "metadata": {},
    "outputs": [
@@ -832,52 +832,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "5\n",
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "1\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "0\n",
-      "1\n",
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "1\n",
-      "0\n"
+      "3.9 ns ± 0.0149 ns per loop (mean ± std. dev. of 7 runs, 100,000,000 loops each)\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "%timeit 2+2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "c3d43eb0-fc44-4cde-adca-f5d7e25bc517",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "4"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fib(6)"
+    "2+2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3d43eb0-fc44-4cde-adca-f5d7e25bc517",
+   "id": "fe02727e-7619-457e-9350-56e71cac7255",
    "metadata": {},
    "outputs": [],
    "source": []
