--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -810,13 +810,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 141,
    "id": "efe4160b-b2d3-4d94-9385-0ac46d2fa193",
    "metadata": {},
    "outputs": [],
    "source": [
     "def fib(n):\n",
-    "    print(n)\n",
     "    if n < 2:\n",
     "        return n\n",
     "    return fib(n-1) + fib(n-2)\n"
@@ -824,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 142,
    "id": "93349a79-ac24-4bff-90f7-9f97681c00cf",
    "metadata": {},
    "outputs": [
@@ -832,39 +831,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.9 ns ± 0.0149 ns per loop (mean ± std. dev. of 7 runs, 100,000,000 loops each)\n"
+      "56.5 µs ± 101 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit 2+2"
+    "%timeit fib(15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 143,
    "id": "c3d43eb0-fc44-4cde-adca-f5d7e25bc517",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "92.1 µs ± 1.13 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
     }
    ],
    "source": [
-    "2+2"
+    "%timeit fib(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "fe02727e-7619-457e-9350-56e71cac7255",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.97 ms ± 25.7 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit fib(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "913ca031-58e2-4688-91bb-cc38bc88396d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.3 ms ± 24.2 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit fib(26)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe02727e-7619-457e-9350-56e71cac7255",
+   "id": "d6c96584-b7f4-4de0-9d62-b4198a8ac978",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit fib(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d88cc12-feb9-4216-a82c-d0be7de1178d",
    "metadata": {},
    "outputs": [],
    "source": []
