--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -895,12 +895,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "id": "d6c96584-b7f4-4de0-9d62-b4198a8ac978",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.5 s ± 18.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
-    "%timeit fib(50)"
+    "%timeit fib(40)"
    ]
   },
   {
@@ -909,7 +917,15 @@
    "id": "4d88cc12-feb9-4216-a82c-d0be7de1178d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from functools import lru_cache\n",
+    "\n",
+    "@lru_cached\n",
+    "def fib_cached(n):\n",
+    "    if n < 2:\n",
+    "        return n\n",
+    "    return fib_cached(n-1) + fib_cached(n-2)\n"
+   ]
   }
  ],
  "metadata": {
