--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -913,19 +913,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "id": "4d88cc12-feb9-4216-a82c-d0be7de1178d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from functools import lru_cache\n",
     "\n",
-    "@lru_cached\n",
+    "@lru_cache\n",
     "def fib_cached(n):\n",
     "    if n < 2:\n",
     "        return n\n",
     "    return fib_cached(n-1) + fib_cached(n-2)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "a1b22542-7b2c-45f9-b302-267f3a7570f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "610"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fib_cached(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "738bce6e-fba9-46f0-9580-72241fcf46e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit fib_cached(500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c54d366c-d662-46b0-b0ee-9e7f42e9ca15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "533bc98b-2f5f-4eb7-9df0-13627dd2458c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29ae83a5-2c57-433d-a62b-162a9dcdf4cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
