--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -950,29 +950,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "id": "738bce6e-fba9-46f0-9580-72241fcf46e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27.4 ns ± 0.0682 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit fib_cached(500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "id": "c54d366c-d662-46b0-b0ee-9e7f42e9ca15",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CacheInfo(hits=162222720, misses=501, maxsize=128, currsize=128)"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fib_cached.cache_info()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "id": "533bc98b-2f5f-4eb7-9df0-13627dd2458c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32.5 ns ± 0.131 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit fib_cached(500)"
+   ]
   },
   {
    "cell_type": "code",
