--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -913,15 +913,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 166,
    "id": "4d88cc12-feb9-4216-a82c-d0be7de1178d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from functools import lru_cache\n",
+    "import time\n",
     "\n",
     "@lru_cache\n",
     "def fib_cached(n):\n",
+    "    time.sleep(0.01)\n",
     "    if n < 2:\n",
     "        return n\n",
     "    return fib_cached(n-1) + fib_cached(n-2)\n"
@@ -950,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 167,
    "id": "738bce6e-fba9-46f0-9580-72241fcf46e1",
    "metadata": {},
    "outputs": [
@@ -958,12 +960,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27.4 ns ± 0.0682 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+      "26.8 ns ± 0.136 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit fib_cached(500)"
+    "%timeit fib_cached(15)"
    ]
   },
   {
@@ -1007,8 +1009,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "id": "29ae83a5-2c57-433d-a62b-162a9dcdf4cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60.1 ns ± 0.17 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit fib_cached(500); fib_cached(500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "ba620af4-7020-490c-9561-572a0010cfb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32.5 ns ± 0.101 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit fib_cached(500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "430dae26-d19c-4cda-b74f-cc811702573d",
    "metadata": {},
    "outputs": [],
    "source": []
