--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -913,17 +913,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 174,
    "id": "4d88cc12-feb9-4216-a82c-d0be7de1178d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from functools import lru_cache\n",
-    "import time\n",
     "\n",
     "@lru_cache\n",
     "def fib_cached(n):\n",
-    "    time.sleep(0.01)\n",
     "    if n < 2:\n",
     "        return n\n",
     "    return fib_cached(n-1) + fib_cached(n-2)\n"
@@ -931,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 169,
    "id": "a1b22542-7b2c-45f9-b302-267f3a7570f8",
    "metadata": {},
    "outputs": [
@@ -941,7 +939,7 @@
        "610"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 173,
    "id": "738bce6e-fba9-46f0-9580-72241fcf46e1",
    "metadata": {},
    "outputs": [
@@ -960,7 +958,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26.8 ns ± 0.136 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+      "26.6 ns ± 0.0979 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
      ]
     }
    ],
@@ -1045,8 +1043,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "id": "430dae26-d19c-4cda-b74f-cc811702573d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fib_cached.cache_clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "06eea59f-067c-41c0-b6f1-0520de02877e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CacheInfo(hits=0, misses=0, maxsize=128, currsize=0)"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fib_cached.cache_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a04b45d-7345-4b81-80cc-96c2fdb503d4",
    "metadata": {},
    "outputs": [],
    "source": []
