--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -1074,8 +1074,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "id": "1a04b45d-7345-4b81-80cc-96c2fdb503d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import \n",
+    "\n",
+    "def my_cache(f):\n",
+    "    def wrapper(*args):\n",
+    "        res = f(*args)\n",
+    "        return res \n",
+    "    return wrapper \n",
+    "\n",
+    "\n",
+    "@my_cache\n",
+    "def fib_cached2(n):\n",
+    "    print(n)\n",
+    "    if n < 2:\n",
+    "        return n\n",
+    "    return fib_cached2(n-1) + fib_cached2(n-2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "e82872cc-db3e-4caf-b136-c70232fba2cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fib_cached2(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f477429d-e5ce-4ab7-8de9-f6c683fa69e3",
    "metadata": {},
    "outputs": [],
    "source": []
