--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -1079,9 +1079,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from functools import \n",
+    "from functools import wraps\n",
     "\n",
     "def my_cache(f):\n",
+    "    @wraps(f)\n",
     "    def wrapper(*args):\n",
     "        res = f(*args)\n",
     "        return res \n",
