--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 182,
    "id": "1a04b45d-7345-4b81-80cc-96c2fdb503d4",
    "metadata": {},
    "outputs": [],
@@ -1084,13 +1084,16 @@
     "def my_cache(f):\n",
     "    @wraps(f)\n",
     "    def wrapper(*args):\n",
+    "        cache = {}\n",
     "        res = f(*args)\n",
+    "        print(cache)\n",
     "        return res \n",
     "    return wrapper \n",
     "\n",
     "\n",
     "@my_cache\n",
     "def fib_cached2(n):\n",
+    "    \"fibonnacyyyyy\"\n",
     "    print(n)\n",
     "    if n < 2:\n",
     "        return n\n",
@@ -1099,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 183,
    "id": "e82872cc-db3e-4caf-b136-c70232fba2cf",
    "metadata": {},
    "outputs": [
@@ -1130,7 +1133,7 @@
        "5"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,8 +1144,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "id": "f477429d-e5ce-4ab7-8de9-f6c683fa69e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mfib_cached2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m fibonnacyyyyy\n",
+       "\u001b[0;31mFile:\u001b[0m      /var/folders/45/mykz63gx201cdrs_lb6qwcj80000gn/T/ipykernel_97909/4017727862.py\n",
+       "\u001b[0;31mType:\u001b[0m      function"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fib_cached2?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbbf95fa-3688-446c-bcdf-a1a1b27d95b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "285a94ca-a31a-4adc-af0f-46858da6979b",
    "metadata": {},
    "outputs": [],
    "source": []
