--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 187,
    "id": "1a04b45d-7345-4b81-80cc-96c2fdb503d4",
    "metadata": {},
    "outputs": [],
@@ -1087,9 +1087,11 @@
     "    \n",
     "    @wraps(f)\n",
     "    def wrapper(*args):\n",
-    "        res = f(*args)\n",
     "        print(cache)\n",
-    "        return res \n",
+    "        if args not in cache:\n",
+    "            res = f(*args)\n",
+    "            cache[args] = res\n",
+    "        return cache[args] \n",
     "    return wrapper \n",
     "\n",
     "\n",
@@ -1104,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 188,
    "id": "e82872cc-db3e-4caf-b136-c70232fba2cf",
    "metadata": {},
    "outputs": [
@@ -1112,21 +1114,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{}\n",
       "5\n",
+      "{}\n",
       "4\n",
+      "{}\n",
       "3\n",
+      "{}\n",
       "2\n",
+      "{}\n",
       "1\n",
+      "{(1,): 1}\n",
       "0\n",
-      "1\n",
-      "2\n",
-      "1\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "0\n",
-      "1\n"
+      "{(1,): 1, (0,): 0, (2,): 1}\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2}\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3}\n"
      ]
     },
     {
@@ -1135,7 +1137,7 @@
        "5"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 189,
    "id": "f477429d-e5ce-4ab7-8de9-f6c683fa69e3",
    "metadata": {},
    "outputs": [
@@ -1155,7 +1157,7 @@
       "text/plain": [
        "\u001b[0;31mSignature:\u001b[0m \u001b[0mfib_cached2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
        "\u001b[0;31mDocstring:\u001b[0m fibonnacyyyyy\n",
-       "\u001b[0;31mFile:\u001b[0m      /var/folders/45/mykz63gx201cdrs_lb6qwcj80000gn/T/ipykernel_97909/4017727862.py\n",
+       "\u001b[0;31mFile:\u001b[0m      /var/folders/45/mykz63gx201cdrs_lb6qwcj80000gn/T/ipykernel_97909/847417952.py\n",
        "\u001b[0;31mType:\u001b[0m      function"
       ]
      },
