--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 192,
    "id": "1a04b45d-7345-4b81-80cc-96c2fdb503d4",
    "metadata": {},
    "outputs": [],
@@ -1101,12 +1101,18 @@
     "    print(n)\n",
     "    if n < 2:\n",
     "        return n\n",
-    "    return fib_cached2(n-1) + fib_cached2(n-2)\n"
+    "    return fib_cached2(n-1) + fib_cached2(n-2)\n",
+    "\n",
+    "@my_cache\n",
+    "def addition(a, b):\n",
+    "    \"fibonnacyyyyy\"\n",
+    "    print(a, b)\n",
+    "    return a + b\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 191,
    "id": "e82872cc-db3e-4caf-b136-c70232fba2cf",
    "metadata": {},
    "outputs": [
@@ -1114,36 +1120,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{}\n",
-      "5\n",
-      "{}\n",
-      "4\n",
-      "{}\n",
-      "3\n",
-      "{}\n",
-      "2\n",
-      "{}\n",
-      "1\n",
-      "{(1,): 1}\n",
-      "0\n",
-      "{(1,): 1, (0,): 0, (2,): 1}\n",
-      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2}\n",
-      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3}\n"
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5}\n",
+      "15\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5}\n",
+      "14\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5}\n",
+      "13\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5}\n",
+      "12\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5}\n",
+      "11\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5}\n",
+      "10\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5}\n",
+      "9\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5}\n",
+      "8\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5}\n",
+      "7\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5}\n",
+      "6\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5}\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5}\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5, (6,): 8}\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5, (6,): 8, (7,): 13}\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5, (6,): 8, (7,): 13, (8,): 21}\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5, (6,): 8, (7,): 13, (8,): 21, (9,): 34}\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5, (6,): 8, (7,): 13, (8,): 21, (9,): 34, (10,): 55}\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5, (6,): 8, (7,): 13, (8,): 21, (9,): 34, (10,): 55, (11,): 89}\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5, (6,): 8, (7,): 13, (8,): 21, (9,): 34, (10,): 55, (11,): 89, (12,): 144}\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5, (6,): 8, (7,): 13, (8,): 21, (9,): 34, (10,): 55, (11,): 89, (12,): 144, (13,): 233}\n",
+      "{(1,): 1, (0,): 0, (2,): 1, (3,): 2, (4,): 3, (5,): 5, (6,): 8, (7,): 13, (8,): 21, (9,): 34, (10,): 55, (11,): 89, (12,): 144, (13,): 233, (14,): 377}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5"
+       "610"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fib_cached2(5)"
+    "fib_cached2(15)"
    ]
   },
   {
@@ -1171,11 +1193,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "id": "fbbf95fa-3688-446c-bcdf-a1a1b27d95b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "1 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "addition(1, 1)"
+   ]
   },
   {
    "cell_type": "code",
