--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -1215,7 +1215,9 @@
    "id": "8edf6ddd-5f09-4805-bc22-c994bfdd69e4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# POO"
+   ]
   }
  ],
  "metadata": {
