--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -1210,13 +1210,52 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "f9e1d3d7-7035-4bc5-ba86-65768978dd34",
+   "metadata": {},
+   "source": [
+    "# POO "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8edf6ddd-5f09-4805-bc22-c994bfdd69e4",
+   "execution_count": 205,
+   "id": "00b6a400-5d58-4da1-899d-78f598a09c5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# POO"
+    "class MyClass:\n",
+    "    pass  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "id": "cf4a72e5-e8e0-4508-b666-8b9ac99131c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.MyClass object at 0x1145aeba0> <class '__main__.MyClass'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mon_objet = MyClass()\n",
+    "print(mon_objet, type(mon_objet))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "295a2e8e-9b77-49dd-8a0e-afd713ae7b7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Personne:\n",
+    "    def __init__(self"
    ]
   }
  ],
