--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -1249,14 +1249,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "id": "295a2e8e-9b77-49dd-8a0e-afd713ae7b7f",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Personne:\n",
-    "    def __init__(self"
+    "    def __init__(self, nom_attribut, age):\n",
+    "        self.nom = nom_attribut\n",
+    "        self.age = age"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "954eb3c4-f8cf-48ab-8774-45db4b2027f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matthieu Falce\n",
+      "Cyrille Poirier\n"
+     ]
+    }
+   ],
+   "source": [
+    "matthieu = Personne(\"Matthieu Falce\", 33)\n",
+    "cyrille = Personne(\"Cyrille Poirier\", 33)\n",
+    "print(matthieu.nom)\n",
+    "print(cyrille.nom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e2b4043-0c6a-48b9-bca3-3cd3fe958809",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
