--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 212,
    "id": "295a2e8e-9b77-49dd-8a0e-afd713ae7b7f",
    "metadata": {},
    "outputs": [],
@@ -1257,12 +1257,15 @@
     "class Personne:\n",
     "    def __init__(self, nom_attribut, age):\n",
     "        self.nom = nom_attribut\n",
-    "        self.age = age"
+    "        self.age = age\n",
+    "\n",
+    "    def presente(self):\n",
+    "        print(f\"Mon nom est {self.nom}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 213,
    "id": "954eb3c4-f8cf-48ab-8774-45db4b2027f3",
    "metadata": {},
    "outputs": [
@@ -1284,8 +1287,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "id": "6e2b4043-0c6a-48b9-bca3-3cd3fe958809",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mon nom est Matthieu Falce\n"
+     ]
+    }
+   ],
+   "source": [
+    "matthieu.presente()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "id": "f3d1370a-4a2d-4727-bf0d-397f8e03596f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mon nom est toto\n"
+     ]
+    }
+   ],
+   "source": [
+    "matthieu.nom = \"toto\"\n",
+    "matthieu.presente()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "61be4ad9-6993-40de-b59c-338d05474fff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "matthieu.trololo = True \n",
+    "print(matthieu.trololo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "892f3377-d1bb-47a0-9dcf-926f9773b191",
    "metadata": {},
    "outputs": [],
    "source": []
