--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -19,9 +19,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5ac0a63-a235-4062-8270-861b88658142",
+   "metadata": {},
+   "source": [
+    "# Rappels du jour 3 \n",
+    "\n",
+    "* décorateurs\n",
+    "* arguments de fonctions (*args / **kwargs)\n",
+    "* "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70902829-505f-4a03-aec7-bca9b9598316",
+   "id": "230e77f0-4904-46bf-91e0-b3a2ab1ed269",
    "metadata": {},
    "outputs": [],
    "source": []
