--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -27,7 +27,8 @@
     "\n",
     "* décorateurs\n",
     "* arguments de fonctions (*args / **kwargs)\n",
-    "* "
+    "    * *args : arguments positionnels\n",
+    "    * **kwargs : "
    ]
   },
   {
