--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -26,9 +26,14 @@
     "# Rappels du jour 3 \n",
     "\n",
     "* décorateurs\n",
-    "* arguments de fonctions (*args / **kwargs)\n",
-    "    * *args : arguments positionnels\n",
-    "    * **kwargs : "
+    "    * recoder le cache\n",
+    "    * \n",
+    "* arguments de fonctions (`*args / **kwargs`)\n",
+    "    * `*args` : arguments positionnels\n",
+    "    * `**kwargs` : arguments nommés\n",
+    "\n",
+    "* POO\n",
+    "* exceptions "
    ]
   },
   {
