--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -33,7 +33,13 @@
     "    * `**kwargs` : arguments nommés\n",
     "\n",
     "* POO\n",
-    "* exceptions "
+    "* exceptions\n",
+    "    * `raise` (permet de lever une exception spé\n",
+    "    * gestion d'exception :\n",
+    "        * `try` (le plus spécifique, on isole les points d'exceptions)\n",
+    "        * `except`\n",
+    "        * `else`\n",
+    "    * `finally`"
    ]
   },
   {
