--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -34,12 +34,12 @@
     "\n",
     "* POO\n",
     "* exceptions\n",
-    "    * `raise` (permet de lever une exception spé\n",
+    "    * `raise` (permet de lever une exception spécifique)\n",
     "    * gestion d'exception :\n",
-    "        * `try` (le plus spécifique, on isole les points d'exceptions)\n",
-    "        * `except`\n",
+    "        * `try` : le plus spécifique, on isole les points d'exceptions\n",
+    "        * `except` : \n",
     "        * `else`\n",
-    "    * `finally`"
+    "        * `finally`"
    ]
   },
   {
