--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -7,9 +7,11 @@
    "source": [
     "# OOP\n",
     "    * properties\n",
+    "    * context managers\n",
     "\n",
     "# Generateurs / opérations paraisseuses \n",
     "    * manipulation de gros fichiers \n",
+    "    * context managers\n",
     "\n",
     "# tests unitaires \n",
     "# imports de modules \n",
@@ -48,7 +50,14 @@
    "id": "230e77f0-4904-46bf-91e0-b3a2ab1ed269",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "try:\n",
+    "    a / b \n",
+    "    import networkx\n",
+    "except Exception as e: \n",
+    "    print(e)\n",
+    "    print(\"can't import networkx\") "
+   ]
   }
  ],
  "metadata": {
