--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -46,18 +46,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "230e77f0-4904-46bf-91e0-b3a2ab1ed269",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "can't import networkx\n"
+     ]
+    }
+   ],
    "source": [
+    "a = 1\n",
+    "b = 0\n",
+    "\n",
     "try:\n",
     "    a / b \n",
     "    import networkx\n",
-    "except Exception as e: \n",
-    "    print(e)\n",
+    "except: \n",
     "    print(\"can't import networkx\") "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c6cc5a8-2e8a-4015-a611-7b7ea61f7312",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
