--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -75,7 +75,19 @@
    "id": "0c6cc5a8-2e8a-4015-a611-7b7ea61f7312",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random \n",
+    "\n",
+    "for i in range(10):\n",
+    "    if random.random() > 0.5:\n",
+    "        import os \n",
+    "    else:\n",
+    "        import sys \n",
+    "\n",
+    "\n",
+    "def f():\n",
+    "    import os"
+   ]
   }
  ],
  "metadata": {
